--- a/styles/style.css
+++ b/styles/style.css
@@ -86,15 +86,6 @@ body {
     margin-left: 15px;
 }
 
-.slider-placeholder {
-    margin: 120px 0 32px 0;
-    padding: 150px;
-    background-color: #000000;
-    color: #ffffff;
-    text-align: center;
-    font-size: 20px;
-}
-
 .collection-switcher {
     display: flex;
     justify-content: space-between;
@@ -161,8 +152,9 @@ body {
 }
 
 .popular-items__img {
-    width: 100%;
+    width: 75%;
     height: auto;
+    display: flex;
     border-radius: 8px;
     margin-bottom: 16px;
 }
@@ -178,6 +170,12 @@ body {
     font-size: 1.2rem;
     font-weight: 500;
     margin-bottom: 8px;
+}
+
+.popular-items__img-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .popular-items__price {
@@ -229,7 +227,7 @@ body {
     object-fit: cover;
 }
 
-.footer {
+footer {
     text-align: center;
     padding: 20px 0;
     background-color: #000000;
@@ -293,6 +291,15 @@ body {
     word-spacing: 10px;
 }
 
+.ascii pre {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #333;
+    background-color: #e9e9e9;
+    padding: 20px;
+    border-radius: 5px;
+}
+
 .discount-table {
     width: 100%;
     padding: 20px 32px;
@@ -329,6 +336,184 @@ body {
 .discount-table__row:nth-child(odd) {
     background-color: #f9f9f9;
 }
+
+main {
+    margin-top: 100px;
+}
+
+.shop-description {
+    padding: 40px 20px;
+}
+
+.about-section {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.about-section__text {
+    flex: 1;
+    padding: 20px;
+}
+
+.about-section__image {
+    flex: 1;
+    text-align: center;
+}
+
+.about-section__image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.about-section h2 {
+    font-size: 1.8rem;
+    margin-bottom: 20px;
+}
+
+.about-section p {
+    font-size: 1rem;
+    color: #555;
+}
+
+
+
+.container {
+    max-width: 1200px;
+    margin: 15px auto;
+    padding: 20px;
+}
+
+.feedback-form__title {
+    font-size: 30px;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.feedback-form {
+    max-width: 1200px;
+    margin: 15px auto;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.feedback-form__label {
+    display: block;
+    font-size: 14px;
+    margin-bottom: 5px;
+    color: #333;
+}
+
+.feedback-form__textarea {
+    width: 100%;
+    height: 100px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: none;
+    font-size: 16px;
+}
+
+.feedback-form__button {
+    padding: 10px 20px;
+    background-color: #2d2d2d;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.feedback-form__button:hover {
+    background-color: #4CAF50;
+}
+
+.feedback-form__submitted-review {
+    margin-top: 20px;
+    font-size: 16px;
+    color: #333;
+}
+
+#submittedReviews {
+    margin-top: 20px;
+}
+
+.review {
+    padding: 10px;
+    background-color: #f4f4f4;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    word-wrap: break-word;
+}
+
+.comment__img {
+    display: flex;
+    justify-content: center;
+}
+
+.comment__title {
+    text-align: left;
+}
+
+.preloader {
+    text-align: center;
+}
+
+.error-message {
+    display: none;
+    color: red;
+    font-weight: bold;
+    text-align: center;
+}
+
+.comment-container {
+    margin-top: 20px;
+}
+
+.comment {
+    background-color: #f9f9f9;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+}
+
+
+:root {
+    --swiper-theme-color: #ffffff !important;
+}
+
+.swiper {
+    height: auto;
+    background-color: #000000;
+    margin: 0 0 32px 0;
+    padding: 150px;
+    color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+}
+
+.swiper-slide img {
+    width: 70%;
+    height: auto;
+    object-fit: cover;
+}
+
+.swiper-button-next {
+    margin-right: 30px;
+}
+
+.swiper-button-prev {
+    margin-left: 30px;
+}
+
+.swiper-pagination-bullets {
+    scale: 1.5;
+}
+
 
 @media (max-width: 768px) {
     .popular-items__list {
